--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -35,7 +35,7 @@ progressive_web_app/orientation=0
 progressive_web_app/icon_144x144=""
 progressive_web_app/icon_180x180=""
 progressive_web_app/icon_512x512=""
-progressive_web_app/background_color=Color(0.321569, 0.0705882, 0.0705882, 1)
+progressive_web_app/background_color=Color(0.00392157, 0, 0.0235294, 1)
 
 [preset.1]
 
