--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,16 +3,16 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 42,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 156,
-"scroll_position": 144.0,
+"row": 22,
+"scroll_position": 15.0,
 "selection": true,
-"selection_from_column": 0,
-"selection_from_line": 156,
-"selection_to_column": 1,
-"selection_to_line": 156,
+"selection_from_column": 42,
+"selection_from_line": 22,
+"selection_to_column": 43,
+"selection_to_line": 22,
 "syntax_highlighter": "GDScript"
 }
 
@@ -25,7 +25,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 15,
-"scroll_position": 0.0,
+"scroll_position": 10.0,
 "selection": true,
 "selection_from_column": 1,
 "selection_from_line": 15,
@@ -57,16 +57,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 21,
+"column": 0,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 33,
-"row": 10,
-"scroll_position": 1.0,
+"h_scroll_position": 0,
+"row": 20,
+"scroll_position": 9.0,
 "selection": true,
-"selection_from_column": 21,
-"selection_from_line": 10,
-"selection_to_column": 22,
-"selection_to_line": 10,
+"selection_from_column": 0,
+"selection_from_line": 20,
+"selection_to_column": 1,
+"selection_to_line": 20,
 "syntax_highlighter": "GDScript"
 }
 
@@ -92,9 +92,13 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 48,
-"scroll_position": 43.0,
-"selection": false,
+"row": 91,
+"scroll_position": 81.0,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 91,
+"selection_to_column": 1,
+"selection_to_line": 91,
 "syntax_highlighter": "GDScript"
 }
 
@@ -103,16 +107,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 37,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 22,
-"scroll_position": 16.0,
+"row": 67,
+"scroll_position": 64.0,
 "selection": true,
-"selection_from_column": 37,
-"selection_from_line": 22,
-"selection_to_column": 38,
-"selection_to_line": 22,
+"selection_from_column": 0,
+"selection_from_line": 67,
+"selection_to_column": 1,
+"selection_to_line": 67,
 "syntax_highlighter": "GDScript"
 }
 
@@ -121,16 +125,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 2,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 17,
-"scroll_position": 17.0,
+"row": 41,
+"scroll_position": 33.0,
 "selection": true,
-"selection_from_column": 2,
-"selection_from_line": 17,
-"selection_to_column": 3,
-"selection_to_line": 17,
+"selection_from_column": 0,
+"selection_from_line": 41,
+"selection_to_column": 1,
+"selection_to_line": 41,
 "syntax_highlighter": "GDScript"
 }
 
