231231 Add orange and azure text color

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -28,7 +28,7 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://Scenes/world.tscn", "res://Scenes/end_menu.tscn", "res://Objects/player.tscn", "res://Objects/hex.tscn", "res://Container/button_container.tscn", "res://Scenes/quit_button.tscn", "res://Scenes/play_button.tscn", "res://Scenes/walls.tscn", "res://UI/ui.tscn", "res://Scenes/score.tscn", "res://Scenes/life.tscn", "res://Objects/health_sprite.tscn", "res://Global/transition_layer.tscn", "res://UI/get_score_label.tscn", "res://Objects/jump_effects.tscn", "res://Scenes/main_menu.tscn")
-current_scene="res://Scenes/main_menu.tscn"
+current_scene="res://UI/ui.tscn"
 center_split_offset=-252
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
@@ -37,7 +37,7 @@ selected_bottom_panel_item=0
 [ScriptEditor]
 
 open_scripts=["res://Container/button_container.gd", "res://addons/godot_vim/cursor.gd", "res://Scenes/end_menu.gd", "res://addons/godot_vim/commands/find.gd", "res://UI/get_score_label.gd", "res://Global/global.gd", "res://Objects/hex.gd", "res://Scenes/hex_spawner.gd", "res://Objects/jump_effects.gd", "res://Scenes/main_menu.gd", "res://Scenes/Player.gd", "res://addons/godot_vim/plugin.gd", "res://addons/godot_vim/status_bar.gd", "res://Global/transition_layer.gd", "res://UI/ui.gd", "res://Scenes/world.gd"]
-selected_script="res://Global/global.gd"
+selected_script="res://UI/ui.gd"
 open_help=["Node2D"]
 script_split_offset=150
 list_split_offset=61
