--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,16 +3,16 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 42,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 22,
-"scroll_position": 15.0,
+"row": 11,
+"scroll_position": 3.0,
 "selection": true,
-"selection_from_column": 42,
-"selection_from_line": 22,
-"selection_to_column": 43,
-"selection_to_line": 22,
+"selection_from_column": 0,
+"selection_from_line": 11,
+"selection_to_column": 1,
+"selection_to_line": 11,
 "syntax_highlighter": "GDScript"
 }
 
@@ -25,7 +25,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 15,
-"scroll_position": 10.0,
+"scroll_position": 3.0,
 "selection": true,
 "selection_from_column": 1,
 "selection_from_line": 15,
@@ -43,7 +43,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 17,
-"scroll_position": 1.0,
+"scroll_position": 0.0,
 "selection": true,
 "selection_from_column": 0,
 "selection_from_line": 17,
@@ -57,16 +57,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 16,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 20,
-"scroll_position": 9.0,
+"row": 14,
+"scroll_position": 3.0,
 "selection": true,
-"selection_from_column": 0,
-"selection_from_line": 20,
-"selection_to_column": 1,
-"selection_to_line": 20,
+"selection_from_column": 9,
+"selection_from_line": 14,
+"selection_to_column": 16,
+"selection_to_line": 14,
 "syntax_highlighter": "GDScript"
 }
 
@@ -89,16 +89,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 4,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 91,
-"scroll_position": 81.0,
+"h_scroll_position": 4,
+"row": 131,
+"scroll_position": 120.0,
 "selection": true,
-"selection_from_column": 0,
-"selection_from_line": 91,
-"selection_to_column": 1,
-"selection_to_line": 91,
+"selection_from_column": 4,
+"selection_from_line": 131,
+"selection_to_column": 5,
+"selection_to_line": 131,
 "syntax_highlighter": "GDScript"
 }
 
@@ -110,13 +110,13 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 67,
-"scroll_position": 64.0,
+"row": 62,
+"scroll_position": 53.0,
 "selection": true,
 "selection_from_column": 0,
-"selection_from_line": 67,
+"selection_from_line": 62,
 "selection_to_column": 1,
-"selection_to_line": 67,
+"selection_to_line": 62,
 "syntax_highlighter": "GDScript"
 }
 
@@ -129,7 +129,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 41,
-"scroll_position": 33.0,
+"scroll_position": 18.0,
 "selection": true,
 "selection_from_column": 0,
 "selection_from_line": 41,
@@ -165,7 +165,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 10,
-"scroll_position": 2.0,
+"scroll_position": 0.0,
 "selection": true,
 "selection_from_column": 0,
 "selection_from_line": 10,
@@ -183,7 +183,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 788,
-"scroll_position": 783.0,
+"scroll_position": 765.0,
 "selection": true,
 "selection_from_column": 30,
 "selection_from_line": 788,
@@ -268,13 +268,9 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 26,
-"scroll_position": 10.0,
-"selection": true,
-"selection_from_column": 0,
-"selection_from_line": 26,
-"selection_to_column": 1,
-"selection_to_line": 26,
+"row": 14,
+"scroll_position": 1.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -283,15 +279,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 13,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 8,
+"row": 12,
 "scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 13,
-"selection_from_line": 8,
-"selection_to_column": 14,
-"selection_to_line": 8,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
