--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -37,7 +37,7 @@ selected_bottom_panel_item=0
 [ScriptEditor]
 
 open_scripts=["res://Container/button_container.gd", "res://addons/godot_vim/cursor.gd", "res://Scenes/end_menu.gd", "res://addons/godot_vim/commands/find.gd", "res://UI/get_score_label.gd", "res://Global/global.gd", "res://Objects/hex.gd", "res://Scenes/hex_spawner.gd", "res://Objects/jump_effects.gd", "res://Scenes/main_menu.gd", "res://Scenes/Player.gd", "res://addons/godot_vim/plugin.gd", "res://addons/godot_vim/status_bar.gd", "res://Global/transition_layer.gd", "res://UI/ui.gd", "res://Scenes/world.gd"]
-selected_script="res://UI/ui.gd"
+selected_script="res://Global/global.gd"
 open_help=["Node2D"]
 script_split_offset=150
 list_split_offset=61
