--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -23,14 +23,10 @@ state={
 "breakpoints": PackedInt32Array(),
 "column": 1,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 0,
+"h_scroll_position": 33,
 "row": 15,
-"scroll_position": 3.0,
-"selection": true,
-"selection_from_column": 1,
-"selection_from_line": 15,
-"selection_to_column": 2,
-"selection_to_line": 15,
+"scroll_position": 16.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -92,13 +88,13 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 0,
-"scroll_position": 0.0,
+"row": 18,
+"scroll_position": 10.0,
 "selection": true,
 "selection_from_column": 0,
-"selection_from_line": 0,
+"selection_from_line": 18,
 "selection_to_column": 1,
-"selection_to_line": 0,
+"selection_to_line": 18,
 "syntax_highlighter": "GDScript"
 }
 
@@ -107,16 +103,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 22,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 7,
+"row": 3,
 "scroll_position": 0.0,
 "selection": true,
-"selection_from_column": 22,
-"selection_from_line": 7,
-"selection_to_column": 23,
-"selection_to_line": 7,
+"selection_from_column": 0,
+"selection_from_line": 3,
+"selection_to_column": 1,
+"selection_to_line": 3,
 "syntax_highlighter": "GDScript"
 }
 
