240122 Add invincible_mode variable

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -28,8 +28,8 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://Scenes/world.tscn", "res://Scenes/end_menu.tscn", "res://Objects/player.tscn", "res://Objects/hex.tscn", "res://Container/button_container.tscn", "res://Scenes/quit_button.tscn", "res://Scenes/play_button.tscn", "res://Scenes/walls.tscn", "res://UI/ui.tscn", "res://Scenes/score.tscn", "res://Scenes/life.tscn", "res://Objects/health_sprite.tscn", "res://Global/transition_layer.tscn", "res://UI/get_score_label.tscn", "res://Objects/jump_effects.tscn", "res://Scenes/main_menu.tscn")
-current_scene="res://UI/ui.tscn"
-center_split_offset=-252
+current_scene="res://Objects/player.tscn"
+center_split_offset=-344
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
 selected_bottom_panel_item=0
