--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,16 +3,16 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 1,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 11,
-"scroll_position": 3.0,
+"h_scroll_position": 31,
+"row": 148,
+"scroll_position": 146.0,
 "selection": true,
-"selection_from_column": 0,
-"selection_from_line": 11,
-"selection_to_column": 1,
-"selection_to_line": 11,
+"selection_from_column": 1,
+"selection_from_line": 148,
+"selection_to_column": 2,
+"selection_to_line": 148,
 "syntax_highlighter": "GDScript"
 }
 
@@ -88,13 +88,9 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 18,
-"scroll_position": 10.0,
-"selection": true,
-"selection_from_column": 0,
-"selection_from_line": 18,
-"selection_to_column": 1,
-"selection_to_line": 18,
+"row": 22,
+"scroll_position": 14.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -124,13 +120,13 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 41,
-"scroll_position": 18.0,
+"row": 39,
+"scroll_position": 39.0,
 "selection": true,
 "selection_from_column": 0,
-"selection_from_line": 41,
+"selection_from_line": 39,
 "selection_to_column": 1,
-"selection_to_line": 41,
+"selection_to_line": 39,
 "syntax_highlighter": "GDScript"
 }
 
