--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,16 +3,16 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 1,
+"column": 0,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 31,
-"row": 148,
-"scroll_position": 146.0,
+"h_scroll_position": 0,
+"row": 28,
+"scroll_position": 29.0,
 "selection": true,
-"selection_from_column": 1,
-"selection_from_line": 148,
-"selection_to_column": 2,
-"selection_to_line": 148,
+"selection_from_column": 0,
+"selection_from_line": 28,
+"selection_to_column": 1,
+"selection_to_line": 28,
 "syntax_highlighter": "GDScript"
 }
 
@@ -21,12 +21,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 1,
+"column": 0,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 33,
-"row": 15,
-"scroll_position": 16.0,
-"selection": false,
+"h_scroll_position": 0,
+"row": 17,
+"scroll_position": 10.0,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 17,
+"selection_to_column": 1,
+"selection_to_line": 17,
 "syntax_highlighter": "GDScript"
 }
 
@@ -55,13 +59,13 @@ state={
 "breakpoints": PackedInt32Array(),
 "column": 16,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 0,
+"h_scroll_position": 134,
 "row": 14,
-"scroll_position": 3.0,
+"scroll_position": 15.0,
 "selection": true,
-"selection_from_column": 9,
+"selection_from_column": 16,
 "selection_from_line": 14,
-"selection_to_column": 16,
+"selection_to_column": 17,
 "selection_to_line": 14,
 "syntax_highlighter": "GDScript"
 }
@@ -85,11 +89,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 8,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 22,
-"scroll_position": 14.0,
+"row": 164,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
