--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,7 +19,7 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Container/")
+dock_filesystem_selected_paths=PackedStringArray("res://addons/godot_vim/dispatcher.gd")
 dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Scenes/", "res://Images/", "res://addons/", "res://addons/godot_vim/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
