--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,16 +19,16 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://addons/godot_vim/cursor.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Scenes/", "res://Images/", "res://addons/", "res://addons/godot_vim/")
+dock_filesystem_selected_paths=PackedStringArray("res://script_templates/AIController/controller_template.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://script_templates/", "res://script_templates/AIController/", "res://addons/godot_vim/", "res://addons/godot_vim/commands/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/world.tscn", "res://Scenes/end_menu.tscn", "res://Objects/player.tscn", "res://Objects/hex.tscn", "res://Container/button_container.tscn", "res://Scenes/quit_button.tscn", "res://Scenes/play_button.tscn", "res://Scenes/walls.tscn", "res://UI/ui.tscn", "res://Scenes/score.tscn", "res://Scenes/life.tscn", "res://Objects/health_sprite.tscn", "res://Global/transition_layer.tscn", "res://UI/get_score_label.tscn", "res://Objects/jump_effects.tscn", "res://Scenes/main_menu.tscn")
-current_scene="res://Objects/player.tscn"
+open_scenes=PackedStringArray("res://Scenes/world.tscn", "res://Scenes/end_menu.tscn", "res://Objects/player.tscn", "res://Scenes/ai_environment.tscn", "res://Objects/hex.tscn", "res://Container/button_container.tscn")
+current_scene="res://Scenes/ai_environment.tscn"
 center_split_offset=-252
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
@@ -36,9 +36,9 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Container/button_container.gd", "res://addons/godot_vim/cursor.gd", "res://Scenes/end_menu.gd", "res://addons/godot_vim/commands/find.gd", "res://UI/get_score_label.gd", "res://Global/global.gd", "res://Objects/hex.gd", "res://Scenes/hex_spawner.gd", "res://Objects/jump_effects.gd", "res://Scenes/main_menu.gd", "res://Scenes/Player.gd", "res://addons/godot_vim/plugin.gd", "res://addons/godot_vim/status_bar.gd", "res://Global/transition_layer.gd", "res://UI/ui.gd", "res://Scenes/world.gd"]
-selected_script="res://Scenes/Player.gd"
-open_help=["Node2D"]
+open_scripts=["res://Objects/AIController2D.gd", "res://addons/godot_rl_agents/controller/ai_controller_2d.gd", "res://Scenes/ai_environment.gd", "res://Container/button_container.gd", "res://script_templates/AIController/controller_template.gd", "res://addons/godot_vim/cursor.gd", "res://Scenes/end_menu.gd", "res://addons/godot_vim/commands/find.gd", "res://UI/get_score_label.gd", "res://Global/global.gd", "res://Objects/hex.gd", "res://Scenes/hex_spawner.gd", "res://Objects/jump_effects.gd", "res://Scenes/main_menu.gd", "res://Scenes/Player.gd", "res://addons/godot_vim/plugin.gd", "res://addons/godot_vim/status_bar.gd", "res://addons/godot_rl_agents/sync.gd", "res://Global/transition_layer.gd", "res://UI/ui.gd", "res://Scenes/world.gd"]
+selected_script="res://Objects/AIController2D.gd"
+open_help=["Area2D", "CollisionShape2D", "Node", "Node2D", "SceneTree"]
 script_split_offset=150
 list_split_offset=61
 
