--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -6,13 +6,13 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 41,
-"scroll_position": 42.0,
+"row": 55,
+"scroll_position": 34.0,
 "selection": true,
 "selection_from_column": 0,
-"selection_from_line": 41,
+"selection_from_line": 55,
 "selection_to_column": 1,
-"selection_to_line": 41,
+"selection_to_line": 55,
 "syntax_highlighter": "GDScript"
 }
 
@@ -42,13 +42,9 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 17,
+"row": 1,
 "scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 0,
-"selection_from_line": 17,
-"selection_to_column": 1,
-"selection_to_line": 17,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -57,16 +53,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 16,
+"column": 0,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 134,
-"row": 14,
-"scroll_position": 15.0,
-"selection": true,
-"selection_from_column": 16,
-"selection_from_line": 14,
-"selection_to_column": 17,
-"selection_to_line": 14,
+"h_scroll_position": 0,
+"row": 28,
+"scroll_position": 7.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -75,12 +67,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 21,
+"column": 16,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 176,
-"row": 3,
-"scroll_position": 4.0,
-"selection": false,
+"h_scroll_position": 0,
+"row": 42,
+"scroll_position": 33.0,
+"selection": true,
+"selection_from_column": 16,
+"selection_from_line": 42,
+"selection_to_column": 17,
+"selection_to_line": 42,
 "syntax_highlighter": "GDScript"
 }
 
@@ -89,12 +85,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 8,
+"column": 5,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 164,
-"scroll_position": 0.0,
-"selection": false,
+"row": 180,
+"scroll_position": 179.0,
+"selection": true,
+"selection_from_column": 5,
+"selection_from_line": 180,
+"selection_to_column": 6,
+"selection_to_line": 180,
 "syntax_highlighter": "GDScript"
 }
 
@@ -107,7 +107,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 3,
-"scroll_position": 0.0,
+"scroll_position": 4.0,
 "selection": true,
 "selection_from_column": 0,
 "selection_from_line": 3,
@@ -121,16 +121,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 2,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 39,
-"scroll_position": 39.0,
+"row": 27,
+"scroll_position": 43.0,
 "selection": true,
-"selection_from_column": 0,
-"selection_from_line": 39,
-"selection_to_column": 1,
-"selection_to_line": 39,
+"selection_from_column": 2,
+"selection_from_line": 27,
+"selection_to_column": 3,
+"selection_to_line": 27,
 "syntax_highlighter": "GDScript"
 }
 
@@ -139,16 +139,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 26,
+"column": 4,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 8,
+"row": 12,
 "scroll_position": 0.0,
 "selection": true,
-"selection_from_column": 26,
-"selection_from_line": 8,
-"selection_to_column": 27,
-"selection_to_line": 8,
+"selection_from_column": 4,
+"selection_from_line": 12,
+"selection_to_column": 5,
+"selection_to_line": 12,
 "syntax_highlighter": "GDScript"
 }
 
@@ -160,13 +160,13 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 10,
+"row": 7,
 "scroll_position": 0.0,
 "selection": true,
 "selection_from_column": 0,
-"selection_from_line": 10,
+"selection_from_line": 7,
 "selection_to_column": 1,
-"selection_to_line": 10,
+"selection_to_line": 7,
 "syntax_highlighter": "GDScript"
 }
 
@@ -175,16 +175,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 30,
+"column": 35,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 788,
-"scroll_position": 765.0,
+"row": 770,
+"scroll_position": 766.0,
 "selection": true,
-"selection_from_column": 30,
-"selection_from_line": 788,
-"selection_to_column": 31,
-"selection_to_line": 788,
+"selection_from_column": 35,
+"selection_from_line": 770,
+"selection_to_column": 36,
+"selection_to_line": 770,
 "syntax_highlighter": "GDScript"
 }
 
@@ -207,16 +207,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 5,
+"column": 0,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 92,
-"row": 142,
-"scroll_position": 143.0,
-"selection": true,
-"selection_from_column": 5,
-"selection_from_line": 142,
-"selection_to_column": 6,
-"selection_to_line": 142,
+"h_scroll_position": 0,
+"row": 125,
+"scroll_position": 117.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -281,5 +277,83 @@ state={
 "row": 12,
 "scroll_position": 0.0,
 "selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Objects/AIController2D.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 36,
+"scroll_position": 30.0,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 36,
+"selection_to_column": 1,
+"selection_to_line": 36,
+"syntax_highlighter": "GDScript"
+}
+
+[res://script_templates/AIController/controller_template.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 4,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scenes/ai_environment.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 30,
+"scroll_position": 19.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://addons/godot_rl_agents/sync.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 473,
+"scroll_position": 473.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://addons/godot_rl_agents/controller/ai_controller_2d.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 86,
+"scroll_position": 66.0,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 86,
+"selection_to_column": 1,
+"selection_to_line": 86,
 "syntax_highlighter": "GDScript"
 }
