--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,16 +3,12 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 32,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 55,
-"scroll_position": 34.0,
-"selection": true,
-"selection_from_column": 0,
-"selection_from_line": 55,
-"selection_to_column": 1,
-"selection_to_line": 55,
+"row": 236,
+"scroll_position": 161.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -25,7 +21,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 17,
-"scroll_position": 10.0,
+"scroll_position": 4.0,
 "selection": true,
 "selection_from_column": 0,
 "selection_from_line": 17,
@@ -56,7 +52,7 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 28,
+"row": 12,
 "scroll_position": 7.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -67,16 +63,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 16,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 42,
-"scroll_position": 33.0,
+"row": 39,
+"scroll_position": 22.0,
 "selection": true,
-"selection_from_column": 16,
-"selection_from_line": 42,
-"selection_to_column": 17,
-"selection_to_line": 42,
+"selection_from_column": 0,
+"selection_from_line": 39,
+"selection_to_column": 1,
+"selection_to_line": 39,
 "syntax_highlighter": "GDScript"
 }
 
@@ -85,16 +81,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 5,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 180,
-"scroll_position": 179.0,
+"row": 0,
+"scroll_position": 0.0,
 "selection": true,
-"selection_from_column": 5,
-"selection_from_line": 180,
-"selection_to_column": 6,
-"selection_to_line": 180,
+"selection_from_column": 0,
+"selection_from_line": 0,
+"selection_to_column": 1,
+"selection_to_line": 0,
 "syntax_highlighter": "GDScript"
 }
 
@@ -107,7 +103,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 3,
-"scroll_position": 4.0,
+"scroll_position": 0.0,
 "selection": true,
 "selection_from_column": 0,
 "selection_from_line": 3,
@@ -121,16 +117,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 2,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 27,
-"scroll_position": 43.0,
+"row": 47,
+"scroll_position": 39.0,
 "selection": true,
-"selection_from_column": 2,
-"selection_from_line": 27,
-"selection_to_column": 3,
-"selection_to_line": 27,
+"selection_from_column": 0,
+"selection_from_line": 47,
+"selection_to_column": 1,
+"selection_to_line": 47,
 "syntax_highlighter": "GDScript"
 }
 
@@ -139,16 +135,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 4,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 12,
+"row": 5,
 "scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 4,
-"selection_from_line": 12,
-"selection_to_column": 5,
-"selection_to_line": 12,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -179,7 +171,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 770,
-"scroll_position": 766.0,
+"scroll_position": 750.0,
 "selection": true,
 "selection_from_column": 35,
 "selection_from_line": 770,
@@ -211,7 +203,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 125,
-"scroll_position": 117.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -243,7 +235,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 26,
-"scroll_position": 3.0,
+"scroll_position": 0.0,
 "selection": true,
 "selection_from_column": 0,
 "selection_from_line": 26,
@@ -261,7 +253,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 14,
-"scroll_position": 1.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -285,16 +277,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 2,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 36,
+"row": 45,
 "scroll_position": 30.0,
 "selection": true,
-"selection_from_column": 0,
-"selection_from_line": 36,
-"selection_to_column": 1,
-"selection_to_line": 36,
+"selection_from_column": 2,
+"selection_from_line": 45,
+"selection_to_column": 3,
+"selection_to_line": 45,
 "syntax_highlighter": "GDScript"
 }
 
@@ -306,9 +298,13 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 4,
+"row": 5,
 "scroll_position": 0.0,
-"selection": false,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 5,
+"selection_to_column": 1,
+"selection_to_line": 5,
 "syntax_highlighter": "GDScript"
 }
 
@@ -317,11 +313,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 2,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 30,
-"scroll_position": 19.0,
+"row": 126,
+"scroll_position": 104.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -331,12 +327,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 45,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 473,
-"scroll_position": 473.0,
-"selection": false,
+"row": 360,
+"scroll_position": 351.0,
+"selection": true,
+"selection_from_column": 45,
+"selection_from_line": 360,
+"selection_to_column": 46,
+"selection_to_line": 360,
 "syntax_highlighter": "GDScript"
 }
 
@@ -348,12 +348,22 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 86,
-"scroll_position": 66.0,
-"selection": true,
-"selection_from_column": 0,
-"selection_from_line": 86,
-"selection_to_column": 1,
-"selection_to_line": 86,
+"row": 42,
+"scroll_position": 42.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
+}
+
+[res://Logs/1000000_x1_b_20.json]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 20,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 7,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "JSON"
 }
