250107 Update train logs

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -12,7 +12,7 @@ dock_floating={}
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=270
+dock_hsplit_2=356
 dock_hsplit_3=-270
 dock_hsplit_4=0
 dock_filesystem_split=0
@@ -28,7 +28,7 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://Scenes/world.tscn", "res://Scenes/end_menu.tscn", "res://Objects/player.tscn", "res://Scenes/unit_ai_environment.tscn", "res://Objects/hex.tscn", "res://Container/button_container.tscn", "res://Scenes/walls.tscn", "res://Scenes/batch_ai_environment.tscn", "res://Scenes/ai_environment.tscn", "res://Scenes/main_menu.tscn")
-current_scene="res://Scenes/main_menu.tscn"
+current_scene="res://Scenes/ai_environment.tscn"
 center_split_offset=-252
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
@@ -36,8 +36,8 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Objects/AIController2D.gd", "res://addons/godot_rl_agents/controller/ai_controller_2d.gd", "res://Scenes/ai_environment.gd", "res://Container/button_container.gd", "res://script_templates/AIController/controller_template.gd", "res://addons/godot_vim/cursor.gd", "res://Scenes/end_menu.gd", "res://Global/global.gd", "res://Objects/hex.gd", "res://Scenes/hex_spawner.gd", "res://Objects/jump_effects.gd", "res://Scenes/main_menu.gd", "res://Scenes/Player.gd", "res://addons/godot_rl_agents/sync.gd", "res://Global/transition_layer.gd", "res://Scenes/world.gd"]
-selected_script="res://Scenes/main_menu.gd"
+open_scripts=["res://Logs/1000000_x1_b_20.json", "res://Logs/1400000_x10_best_18.json", "res://Logs/a-3_2000000_x10_best_21.json", "res://Logs/a-4_3000000_x10_best_18.json", "res://Objects/AIController2D.gd", "res://addons/godot_rl_agents/controller/ai_controller_2d.gd", "res://Scenes/ai_environment.gd", "res://Container/button_container.gd", "res://script_templates/AIController/controller_template.gd", "res://addons/godot_vim/cursor.gd", "res://Scenes/end_menu.gd", "res://Global/global.gd", "res://Objects/hex.gd", "res://Scenes/hex_spawner.gd", "res://Logs/history_01.json", "res://Objects/jump_effects.gd", "res://Scenes/main_menu.gd", "res://Scenes/Player.gd", "res://addons/godot_rl_agents/sync.gd", "res://Global/transition_layer.gd", "res://Scenes/world.gd"]
+selected_script="res://Logs/a-4_3000000_x10_best_18.json"
 open_help=["Node2D", "SceneTree"]
 script_split_offset=150
 list_split_offset=61
